package kitchen

import (
	"context"

	"github.com/go-redis/redis/v8"
	"github.com/DimaJoyti/go-coffee/pkg/logger"
	redismcp "github.com/DimaJoyti/go-coffee/pkg/redis-mcp"
)

// KitchenRepository defines the interface for kitchen data operations
type KitchenRepository interface {
	// Equipment operations
	GetEquipment(ctx context.Context, equipmentID string) (*Equipment, error)
	ListEquipment(ctx context.Context) ([]*Equipment, error)
	UpdateEquipmentStatus(ctx context.Context, equipmentID string, status EquipmentStatus) error
	
	// Staff operations
	GetStaff(ctx context.Context, staffID string) (*Staff, error)
	ListStaff(ctx context.Context) ([]*Staff, error)
	UpdateStaffAvailability(ctx context.Context, staffID string, available bool) error
	
	// Order operations
	GetOrder(ctx context.Context, orderID string) (*Order, error)
	CreateOrder(ctx context.Context, order *Order) error
	UpdateOrderStatus(ctx context.Context, orderID string, status OrderStatus) error
}

// KitchenOptimizer handles AI-powered kitchen optimization
type KitchenOptimizer interface {
	OptimizeWorkflow(ctx context.Context, orders []*Order) (*WorkflowOptimization, error)
	AllocateStaff(ctx context.Context, orders []*Order, staff []*Staff) (*StaffAllocation, error)
	PredictPreparationTime(ctx context.Context, order *Order) (int32, error)
}

// QueueManager manages order queues and processing
type QueueManager interface {
	AddOrder(ctx context.Context, order *Order) error
	GetNextOrder(ctx context.Context) (*Order, error)
	UpdateOrderPriority(ctx context.Context, orderID string, priority int32) error
	GetQueueStatus(ctx context.Context) (*QueueStatus, error)
}

// Service implements the kitchen service
type Service struct {
	repo      KitchenRepository
	queue     QueueManager
	optimizer KitchenOptimizer
	logger    *logger.Logger
}

// NewService creates a new kitchen service
func NewService(repo KitchenRepository, queue QueueManager, optimizer KitchenOptimizer, logger *logger.Logger) *Service {
	return &Service{
		repo:      repo,
		queue:     queue,
		optimizer: optimizer,
		logger:    logger,
	}
}

// RedisKitchenRepository implements KitchenRepository using Redis
type RedisKitchenRepository struct {
	client *redis.Client
	logger *logger.Logger
}

// NewRedisKitchenRepository creates a new Redis-based kitchen repository
func NewRedisKitchenRepository(client *redis.Client, logger *logger.Logger) *RedisKitchenRepository {
	return &RedisKitchenRepository{
		client: client,
		logger: logger,
	}
}

// KitchenOptimizerImpl implements KitchenOptimizer
type KitchenOptimizerImpl struct {
	aiService *redismcp.AIAgent
	logger    *logger.Logger
}

// NewKitchenOptimizer creates a new kitchen optimizer
func NewKitchenOptimizer(aiService *redismcp.AIAgent, logger *logger.Logger) *KitchenOptimizerImpl {
	return &KitchenOptimizerImpl{
		aiService: aiService,
		logger:    logger,
	}
}

// QueueManagerImpl implements QueueManager
type QueueManagerImpl struct {
	client    *redis.Client
	optimizer KitchenOptimizer
	logger    *logger.Logger
}

// NewQueueManager creates a new queue manager
func NewQueueManager(client *redis.Client, optimizer KitchenOptimizer, logger *logger.Logger) *QueueManagerImpl {
	return &QueueManagerImpl{
		client:    client,
		optimizer: optimizer,
		logger:    logger,
	}
}

// Placeholder implementations for the repository methods
func (r *RedisKitchenRepository) GetEquipment(ctx context.Context, equipmentID string) (*Equipment, error) {
	// TODO: Implement Redis-based equipment retrieval
	return &Equipment{ID: equipmentID, Status: EquipmentStatusAvailable}, nil
}

func (r *RedisKitchenRepository) ListEquipment(ctx context.Context) ([]*Equipment, error) {
	// TODO: Implement Redis-based equipment listing
	return []*Equipment{}, nil
}

func (r *RedisKitchenRepository) UpdateEquipmentStatus(ctx context.Context, equipmentID string, status EquipmentStatus) error {
	// TODO: Implement Redis-based equipment status update
	return nil
}

func (r *RedisKitchenRepository) GetStaff(ctx context.Context, staffID string) (*Staff, error) {
	// TODO: Implement Redis-based staff retrieval
	return &Staff{ID: staffID, IsAvailable: true}, nil
}

func (r *RedisKitchenRepository) ListStaff(ctx context.Context) ([]*Staff, error) {
	// TODO: Implement Redis-based staff listing
	return []*Staff{}, nil
}

func (r *RedisKitchenRepository) UpdateStaffAvailability(ctx context.Context, staffID string, available bool) error {
	// TODO: Implement Redis-based staff availability update
	return nil
}

func (r *RedisKitchenRepository) GetOrder(ctx context.Context, orderID string) (*Order, error) {
	// TODO: Implement Redis-based order retrieval
	return &Order{ID: orderID, Status: OrderStatusPending}, nil
}

func (r *RedisKitchenRepository) CreateOrder(ctx context.Context, order *Order) error {
	// TODO: Implement Redis-based order creation
	return nil
}

func (r *RedisKitchenRepository) UpdateOrderStatus(ctx context.Context, orderID string, status OrderStatus) error {
	// TODO: Implement Redis-based order status update
	return nil
}

// Placeholder implementations for the optimizer methods
func (o *KitchenOptimizerImpl) OptimizeWorkflow(ctx context.Context, orders []*Order) (*WorkflowOptimization, error) {
	// TODO: Implement AI-powered workflow optimization
	return &WorkflowOptimization{}, nil
}

func (o *KitchenOptimizerImpl) AllocateStaff(ctx context.Context, orders []*Order, staff []*Staff) (*StaffAllocation, error) {
	// TODO: Implement AI-powered staff allocation
	return &StaffAllocation{}, nil
}

func (o *KitchenOptimizerImpl) PredictPreparationTime(ctx context.Context, order *Order) (int32, error) {
	// TODO: Implement AI-powered preparation time prediction
	return 300, nil // 5 minutes default
}

// Placeholder implementations for the queue manager methods
func (q *QueueManagerImpl) AddOrder(ctx context.Context, order *Order) error {
	// TODO: Implement Redis-based order queue addition
	return nil
}

func (q *QueueManagerImpl) GetNextOrder(ctx context.Context) (*Order, error) {
	// TODO: Implement Redis-based next order retrieval
	return &Order{ID: "next-order", Status: OrderStatusPending}, nil
}

func (q *QueueManagerImpl) UpdateOrderPriority(ctx context.Context, orderID string, priority int32) error {
	// TODO: Implement Redis-based order priority update
	return nil
}

func (q *QueueManagerImpl) GetQueueStatus(ctx context.Context) (*QueueStatus, error) {
	// TODO: Implement Redis-based queue status retrieval
	return &QueueStatus{TotalOrders: 0, ProcessingOrders: 0}, nil
}

// RegisterKitchenServiceServer is a placeholder for gRPC service registration
func RegisterKitchenServiceServer(server interface{}, service *Service) {
	// TODO: Implement gRPC service registration when protobuf is ready
}
